1.添加SDK启动参数，解决部分Mac机器长时间运行SDK会爆内存溢出的错误。