@@ -25,6 +25,7 @@ set JAVA_OPTS=%JAVA_OPTS% -XX:+UseParallelGC
 
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseStringCache
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseCompressedStrings
+set JAVA_OPTS=%JAVA_OPTS% -XX:MaxPermSize=256m
 
 set JAVA_OPTS=%JAVA_OPTS% -javaagent:%DCSDK_HOME%/lib/taobao/sdk-agent-2.0.0-SNAPSHOT.jar
 
